<resources>
    <string name="app_name"></string>

    <!-- Logout Operations-->
    <string name="Logout">OPERATIONS_LOGOUT</string>
    <!-- TextView -->
    <string name="TextRegistry">Registrar usuario</string>
    <string name="TextLostCount">Olvide mis usuario</string>
    <string name="SelectIcon">Selecciona un icono</string>
    <string name="inputCount">Nombre de cuenta</string>
    <string name="inputPassword">Contraseña</string>
    <string name="usewNEw">Aun notienes cuentas \nPuedes agrear una\n dando clic en este icono</string>
    <string name="delateitem">Borrar</string>


    <!-- Hints EditText-->
    <string name="hintUser">Usuario</string>
    <string name="hintPassword">Contraseña</string>
    <string name="hintRepitPassword">Confirmar Contraseña</string>
    <!--Buttons Texts-->
    <string name="ButtonLoging">Iniciar sesion</string>
    <string name="ButtonRegistry">Registrar</string>
    <!--Keystore Texts-->
    <string name="key_store_alias">MS_CUENTAS</string>
    <string name="shared_preferences_name">SHARED_PREFERENCES_MSCUENTAS</string>
    <string name="shared_preferences_key_pin">SHARED_PREFERENCES_KEY_PIN</string>
    <string name="shared_preferences_key_token">SHARED_PREFERENCES_KEY_TOKEN</string>

    <!-- Keys for passing values -->
    <string name="key_previous_pin">PREVIOUS_PIN</string>
    <string name="key_is_unloking">IS_UNLOCKING</string>
    <!-- Pin retry -->


    <string name="key_pin_attempts">PIN_ATTEMPS</string>
    <string name="key_blocked_timestamp">BLOCKED_TIMESTAMP</string>

    <!-- Background time -->
    <string name="key_background_time">BACKGROUND_TIME</string>


</resources>
