<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.loging"
    android:orientation="vertical">
    <LinearLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/locked"/>
        <EditText
            android:id="@+id/userFielLoging"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/simple_roud_fields"
            android:inputType="textPersonName"
            android:hint="@string/hintUser"
            android:textColorHint="@color/colorgray"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <EditText
            android:id="@+id/passwordFieldLoging"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/simple_roud_fields"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:hint="@string/hintPassword"
            android:textColorHint="@color/colorgray"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tvregistryLoging"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorBlue"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextRegistry"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/backgroundbutton"
            android:text="@string/ButtonLoging"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>




</LinearLayout>