<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.addNewCount">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SelectIcon"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/roud_scrollview">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icoOne"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/creditcards" />

                <ImageView
                    android:id="@+id/icoTwo"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/facebook" />

                <ImageView
                    android:id="@+id/icoThree"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/gmail" />

                <ImageView
                    android:id="@+id/iconFor"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/githubsign" />

                <ImageView
                    android:id="@+id/icoFive"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/domain" />

                <ImageView
                    android:id="@+id/icoSix"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/laptop" />

                <ImageView
                    android:id="@+id/icoSeven"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/smartphone" />

            </LinearLayout>


        </HorizontalScrollView>

        <TextView
            android:textColor="@color/colorBlack"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputCount"/>
        <EditText
            android:id="@+id/nameCountNewCount"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textColor="@color/colorBlack"
            android:background="@drawable/simple_roud_fields"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <TextView
            android:textColor="@color/colorBlack"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputPassword"/>
        <EditText
            android:id="@+id/passworNewCount"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:background="@drawable/simple_roud_fields"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button
            android:id="@+id/buttonNewCount"
            android:background="@drawable/backgroundbutton"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/ButtonRegistry"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>






</LinearLayout>